hphp/hack/test/typecheck/unmagic_stringish/unmagic_stringish2.php.exp
File "unmagic_stringish2.php", line 69, characters 4-8:
You cannot use this object as a string
Implicit conversions of Stringish objects to string are deprecated. (Typing[4067])
File "unmagic_stringish2.php", line 70, characters 6-10:
You cannot use this object as a string
Implicit conversions of Stringish objects to string are deprecated. (Typing[4067])
File "unmagic_stringish2.php", line 72, characters 4-8:
You cannot use this object as a string
Implicit conversions of Stringish objects to string are deprecated. (Typing[4067])
File "unmagic_stringish2.php", line 73, characters 6-10:
You cannot use this object as a string
Implicit conversions of Stringish objects to string are deprecated. (Typing[4067])
File "unmagic_stringish2.php", line 75, characters 4-12:
You cannot use this object as a string
Implicit conversions of Stringish objects to string are deprecated. (Typing[4067])
File "unmagic_stringish2.php", line 76, characters 6-14:
You cannot use this object as a string
Implicit conversions of Stringish objects to string are deprecated. (Typing[4067])
File "unmagic_stringish2.php", line 78, characters 4-12:
You cannot use this object as a string
Implicit conversions of Stringish objects to string are deprecated. (Typing[4067])
File "unmagic_stringish2.php", line 79, characters 6-14:
You cannot use this object as a string
Implicit conversions of Stringish objects to string are deprecated. (Typing[4067])
File "unmagic_stringish2.php", line 81, characters 4-12:
You cannot use this object as a string
Implicit conversions of Stringish objects to string are deprecated. (Typing[4067])
File "unmagic_stringish2.php", line 82, characters 6-14:
You cannot use this object as a string
Implicit conversions of Stringish objects to string are deprecated. (Typing[4067])
File "unmagic_stringish2.php", line 33, characters 12-25:
Cannot cast a value of type `this` to string. Only primitives may be used in a `(string)` cast. (Typing[4281])
File "unmagic_stringish2.php", line 45, characters 12-25:
Cannot cast a value of type `this` to string. Only primitives may be used in a `(string)` cast. (Typing[4281])
File "unmagic_stringish2.php", line 66, characters 4-8:
Expected an object convertible to string but got an object of exactly the class CNonStringish (Typing[4318])
File "unmagic_stringish2.php", line 67, characters 6-10:
Expected an object convertible to string but got an object of exactly the class CNonStringish (Typing[4318])
